# deepstream-lp-detection

./: .gitignore  LICENSE.md  README.md  architecture_comparison (1).ipynb  architecture_comparison.ipynb  config_infer_primary_yolo26.txt  deepstream_app_config.txt  pyproject.toml  requirements.txt
benchmarks/: generate_deepstream_configs.py  run_deepstream_benchmarks.py  run_model_benchmarks.py  telemetry.py
benchmarks/configs/: config_infer_primary_fp16_s01.txt  deepstream_app_fp16_s04.txt
benchmarks/results/: model_benchmarks.csv
configs/: config_infer_primary_yolo26.txt  deepstream_app_config.txt
configs/benchmarks/: config_infer_primary_fp16_s02.txt  config_infer_primary_fp16_s04.txt  config_infer_primary_fp16_s08.txt  config_infer_primary_fp16_s16.txt  deepstream_app_fp16_s01.txt  deepstream_app_fp16_s02.txt  deepstream_app_fp16_s08.txt  deepstream_app_fp16_s16.txt
notebooks/: hyper_parameters_search.ipynb
results/: deepstream_benchmarks.csv  deepstream_benchmarks.json  model_benchmarks.json  training_log.csv
scripts/: download_data.py  generate_deepstream_configs.py  run_deepstream_benchmarks.py  run_model_benchmarks.py
src/: __init__.py  export.py  telemetry.py
test_quantization/: download_data.py  train.ipynb
test_quantization/runs/detect/train/: args.yaml
test_quantization/runs/detect/train/weights/: best.cache
tests/: test_export_utils.py  test_telemetry.py
